# codex-dream-seed

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
codex_dream/: __init__.py  bootstrap.py  cli.py  console.py  database.py  knowledge.py  ledger.py  locking.py  privacy.py  review.py  schema.py  workspace.py
codex_dream/console_static/: __init__.py  app.css  app.js  index.html
codex_dream/migrations/: __init__.py  engine.py  registry.py  v0_to_v1.py  v1_to_v2.py
docs/: dream-operating-handbook.md  schema-migrations.md
docs/design/: dream-console-experience-v1.md  dream-console-flow-board-v1.md
docs/specs/: release-v0.4.0-goal.md
docs/specs/dream-console/: 01-user-journey-and-state-semantics.md  02-handoff-recovery-and-console-context.md  03-workspace-runtime-and-refresh.md  04-operating-handbook-and-onboarding.md  05-verification-and-exit.md  console-usability-goal.md
docs/verification/: dream-console-browser-journey.md  release-v0.4.0.md
schemas/: candidate.schema.json  knowledge-item.schema.json  lifecycle-event.schema.json  validation-contract.schema.json
scripts/: bootstrap.py
skills/codex-dream/: SKILL.md
templates/: candidate.json  weekly-report.md
tests/: console_runtime_tests.py  test_bootstrap.py  test_cli.py  test_console.py  test_console_runtime.py  test_database.py  test_handbook.py  test_knowledge.py  test_ledger.py  test_locking.py  test_migration.py  test_packaging.py  test_privacy.py  test_release_contract.py  test_review.py  test_v2_migration.py  test_workspace.py
(+7 files in other folders)
